--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize/css/materialize.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.css"  media="screen,projection"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script type="text/javascript" src="calculadora_op.js"></script>
 	<style>
@@ -14,7 +14,7 @@
 	</style>
     <title>Calculadora Matricial</title>
     <nav class="blue darken-2">
-    	<a href="/" class="brand-logo">Operaciones con Matrices</a>
+    	<a href="/" class="brand-logo">3v3Calculator</a>
     	<ul id="slide-out" class="side-nav">
     		<li><a href="#!">Acerca de</a></li>
     		<li><a href="#!">Contactanos</a></li>
