--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
     	<ul id="slide-out" class="side-nav">
             <li><a href="http://marcoredmg.github.io">Marco's Blog</a></li>
     		<li><a href="https://github.com/Marcoredmg">Git Hub</a></li>
-    		<li><a href="">LinkedIn</a></li>
+    		<li><a href="/">LinkedIn</a></li>
     	</ul>
     <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">reorder</i></a>
 </nav>
